Removing sensitive credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.jpa.open-in-view=false
 project.image=images/
 
 spring.app.jwtSecret=your_jwt_secret_key
-spring.app.jwtExpirationMs=3000000
-spring.app.jwtCookie = ecommerce_project
+spring.app.jwtExpirationMs=time_in_milliseconds
+spring.app.jwtCookie=your_cookie
 
 logging.level.org.springframework=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
